--- a/www2/sass/screen.scss
+++ b/www2/sass/screen.scss
@@ -69,10 +69,9 @@ button {
 	display: none;
 	opacity: 0;
 	.screen-header-container {
-		margin-bottom: 40px;
 	}
 	.screen-custom-container {
-		margin-bottom: 40px;
+		margin-bottom: 10px;
 	}
 	.screen-controls-container {
 		position: relative;
@@ -94,15 +93,16 @@ button {
 	}
 
 	.screen-header {
-		font-size: 30px;
+		font-size: 25px;
+		line-height: 28px;
 		margin-bottom: 10px;
 	}
 
 	.screen-description {
 		color: #c981fc;
-		font-size: 20px;
+		font-size: 16px;
 		margin-bottom: 10px;
-		line-height: 34px;
+		line-height: 22px;
 	}
 
 	.screen-label {
@@ -112,7 +112,7 @@ button {
 	}
 
 	.screen-number-big {
-		font-size: 40px;
+		font-size: 25px;
 	}
 	.screen-button-wide {
 		display: block;
@@ -196,7 +196,6 @@ button {
 	text-align: center;
 	padding: 10px;
 	z-index: 100;
-	padding-top: 40px;
 	text-transform: uppercase;
 	text-align: center;
 	@include box-shadow(rgb(0,0,0) 0 0 40px);
@@ -481,8 +480,8 @@ button {
 		.question {
 			color: white;
 			text-transform: uppercase;
-			font-size: 33px;
-		    line-height: 34px;
+			font-size: 28px;
+		    line-height: 28px;
 			text-align: center;
 			text-shadow: 4px 4px 0px #000, -4px -4px 0px #000, -4px 4px 0px #000, 4px -4px 0px #000, 4px 0 0px #000, -4px 0 0px #000, 0 4px 0px #000, 0 -4px 0px #000;
 
@@ -961,10 +960,83 @@ button {
 			background-image: url(../img/level-2-ground.png);
 		}
 	}
+
+	&.level-5 {
+		background-image: none;
+		background-color: #00282f;
+		background-position: bottom left;
+
+		.character {
+			width: 70px;
+			height: 97px;
+			position: absolute;
+			bottom: 62px;
+			left: 0;
+			@include animation(lefttoright 10s infinite linear);
+			&:after {
+				content: "";
+				position: absolute;
+				width: 70px;
+				height: 97px;
+				top: 0;
+				left: 0;
+				background: url(../img/level-5-character.png) left center;
+				background-size: auto 100%;
+				@include animation(characterLevel5 .8s steps(6) infinite);
+			}
+		}
+
+		.ground {
+			background-image: url(../img/level-5-ground.png);
+			background-position: bottom center;
+			background-repeat: no-repeat;
+			height: 100%;
+		}
+	}
+	&.level-6 {
+		background-image: none;
+		background-color: #ffffff;
+		background-position: bottom left;
+
+		.character {
+			width: 85px;
+			height: 118px;
+			position: absolute;
+			bottom: 35px;
+			left: 50%;
+			margin-left: -30px;
+			&:after {
+				content: "";
+				position: absolute;
+				width: 85px;
+				height: 118px;
+				top: 0;
+				left: 0;
+				background: url(../img/level-6-character.png) left center;
+				background-size: auto 100%;
+				@include animation(characterLevel6 3s steps(4) infinite);
+			}
+		}
+
+		.ground {
+			background-image: url(../img/level-6-ground.png);
+			background-position: bottom center;
+			background-repeat: no-repeat;
+			height: 100%;
+		}
+	}
 }
 
 @include keyframes(character) {
    100% { background-position: -216px; }
+}
+
+@include keyframes(characterLevel5) {
+   100% { background-position: -420px; }
+}
+
+@include keyframes(characterLevel6) {
+   100% { background-position: -340px; }
 }
 
 @include keyframes(characterLevel2) {
@@ -1029,4 +1101,11 @@ button {
 
 #statusscreen-score-to-beat {
 	color: white;
+}
+
+
+.bottom {
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
